<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_cart" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_watch_later_black_24dp"
            android:title="@string/menu_order" />

        <item
            android:id="@+id/nav_signOut"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_sign_out" />
    </group>

</menu>
